# toaster-chip8

./: CMakeLists.txt  README.md
app-sdl/: CMakeLists.txt
app-sdl/include/: chipRendererSDL.h  inputHandlerSDL.h  windowSDL.h
app-sdl/src/: chipRendererSDL.cpp  inputHandlerSDL.cpp  main.cpp  windowSDL.cpp
cpputest/: CMakeLists.txt
emulator/: CMakeLists.txt
emulator/include/: chipDisplay.h  chipInstruction.h  chipMemory.h  chipRenderer.h  emulatorState.h  eventTimer.h  instructionDecoder.h
emulator/src/: chipDisplay.cpp  chipMemory.cpp  emulator.cpp  eventTimer.cpp  instructionDecoder.cpp  instructionExecutor.cpp  registerFile.cpp
include/app-desktop-sdl/: chipRendererSdl.h  sdlContext.h  sdlWindow.h
include/emulator/: chipRenderer.h  display.h  emuErrorCode.h  emulator.h  emulatorState.h  eventTimer.h  font.h  instructionDecoder.h  instructionExecutor.h  memory.h  registerFile.h
src/app/: main.cpp
src/app-desktop-sdl/: chipRendererSdl.cpp  inputHandlerSDL.cpp  main.cpp  sdlContext.cpp  sdlWindow.cpp
src/emulator/: display.cpp  emulator.cpp  eventTimer.cpp  instructionDecoder.cpp  instructionExecutor.cpp  memory.cpp  registerFile.cpp
src/test/: test-main.cpp  test-registerFile.cpp  test_main.cpp
src/test/sample-tests/: sample-test.cpp
test/: CMakeLists.txt  chipRendererMock.cpp  chipRendererMock.h  emuErrorCodeUtils.h  stringConversions.h  test-decode.cpp  test-display.cpp  test-execute.cpp  test-main.cpp  test-memory.cpp  test-registerFile.cpp
test/include/: chipRendererMock.h  stringConversions.h
test/src/: test-decode.cpp  test-display.cpp  test-execute.cpp  test-memory.cpp  test-registerFile.cpp
